# moca-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bunfig.toml  package.json
.github/workflows/: release.yml
client/: index.html  package.json  playwright.config.js  vite.config.js
client/src/: App.svelte  global.sass  main.js
client/src/lib/: api.js  emotions.js  fetcher.js  player.svelte.js  router.svelte.js  toast.svelte.js
client/src/lib/components/: ConfirmModal.svelte  DictionaryEntryModal.svelte  DictionaryView.svelte  EmotionChips.svelte  EmotionEditor.svelte  HelpModal.svelte  Icon.svelte  LineContextMenu.svelte  LineRow.svelte  LineWorkspace.svelte  Modal.svelte  NewLineModal.svelte  NotifySubscribe.svelte  PourInModal.svelte  ProjectList.svelte  Spinner.svelte  TextEditModal.svelte  Toast.svelte  WorkPortrait.svelte  WorkScene.svelte  WorkTimerPanel.svelte  WorkView.svelte
client/src/lib/work/: lines.js  portrait.js  timer.svelte.js  voice.svelte.js
client/tests/: 01-initial-focus.spec.js  02-l-guard.spec.js  03-columns-accordion.spec.js  04-yank-paste.spec.js  05-dd-delete.spec.js  06-new-line.spec.js  07-text-edit.spec.js  08-mode-toggle.spec.js  09-notify-megaphone.spec.js  10-guards.spec.js  11-space-play.spec.js  12-help-modal.spec.js  13-project-rename.spec.js  14-work-tab.spec.js  15-dictionary-vim.spec.js  helpers.js
docs/: DESIGN.md  api.md  architecture.md  cli.md  config.md  deploy.md  shortcuts.md  testing.md
src/: analyze.rs  analyze.ts  app.test.ts  app.ts  assets.rs  config.rs  db.rs  dictionary.rs  dictionary.ts  error.rs  fallback.rs  index.ts  main.rs  opus.rs  script.rs  script.test.ts  script.ts  serialize.rs  spa.rs  state.rs  synth.rs  types.d.ts  wav.rs  wav.ts
src-ts/: analyze.ts  app.test.ts  dictionary.test.ts
src-ts/db/: index.ts  schema.ts
src-ts/lib/: config.ts  init.ts
src-ts/routes/: projects.test.ts  serialize.ts
src/db/: schema.ts
src/lib/: init.ts  spa.ts
src/routes/: analyze.rs  audio.rs  dictionary.rs  dictionary.test.ts  dictionary.ts  import.test.ts  lines.rs  lines.test.ts  lines.ts  mod.rs  notify.rs  notify.test.ts  projects.rs  projects.ts  say.rs  work.rs
src/test/: setup.ts
tests/: moca-listen.sh
