[package]
name = "moca-server"
version = "0.5.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tempfile = "3"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
tower-http = { version = "0.6", features = ["fs", "trace"] }
opus = "0.3"
ogg = "0.9"
async-trait = "0.1.89"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
encoding_rs = "0.8"
unicode-normalization = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints.clippy]
all = "warn"

[profile.release]
lto = true
strip = true
codegen-units = 1
